# BagelSim

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build_release.yml
release/: hull.glb  hull.mtl  lighting.fs  map.glb  name.glb
shell/: index.html
src/: CMakeLists.txt  config.h  control.cpp  control.h  game.cpp  jolt.cpp  jolt.h  main.cpp  rlights.cpp  rlights.h  scene.h  swerve.cpp  swerve.h
